--- a/_config.yml
+++ b/_config.yml
@@ -56,9 +56,9 @@ widgets:
 # Key is the name of FontAwsome icon.
 # Value is the target link (E.g. GitHub: https://github.com/iTimeTraveler)
 social:
-  Github: https://github.com/iTimeTraveler
+  Github: https://github.com/lifehacr
   Weibo: 
-  Twitter: 
+  Twitter: https://www.x.com/kdtwitts
   Facebook: 
   Google-plus: 
   Instagram: 
@@ -73,8 +73,8 @@ search:
 
 # comment ShortName, you can choose only ONE to display.
 duoshuo_shortname: 
-disqus_shortname: 
-livere_shortname: MTAyMC8yOTQ4MS82MDQ5
+disqus_shortname: kdms
+#livere_shortname: MTAyMC8yOTQ4MS82MDQ5
 uyan_uid: 
 wumii: 
 
@@ -117,4 +117,4 @@ facebook_sdk:
   webmaster:    #true
 
 # CNZZ count
-cnzz_siteid: 1260716016
+#cnzz_siteid: 1260716016
