--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "MIT",
   "private": true,
   "homepage": "https://github.com/iTimeTraveler/hexo-theme-hipaper",
+  "scripts": {
+  "build": "npm install hexo-cli -g && hexo generate"
+}
   "devDependencies": {
     "grunt": "~0.4.2",
     "load-grunt-tasks": "~0.2.0",
